[package]
name = "rs_curl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.5"
serde_json = "1.0"


[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
